--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@nuxt/devtools": "latest",
     "@nuxt/ui": "^2.13.0",
     "nuxt": "^3.10.1"
+  },
+  "dependencies": {
+    "@iconify-json/grommet-icons": "^1.1.12"
   }
 }
