--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "mdda3",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,11 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify-json/grommet-icons": "^1.1.12",
     "@nuxt/devtools": "latest",
-    "@nuxt/ui": "^2.13.0",
-    "nuxt": "^3.10.1"
-  },
-  "dependencies": {
-    "@iconify-json/grommet-icons": "^1.1.12"
+    "@nuxt/ui": "^2.18.4",
+    "nuxt": "^3.12.4",
+    "zod": "^3.23.8"
   }
 }
